objects/Device_Forecast__c.object
<CustomObject>
    <description>Individual device forecast coming from Data warehouse.</description>
    <fields>
        <fullName>ASP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <description>The parent device the forecast is tied.</description>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Device Forecasts</relationshipLabel>
        <relationshipName>Device_Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <description>This field contains the fiscal quarter in YYYY-QQ format and used during adjustment computation.</description>
        <label>Fiscal Quarter</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>CASESAFEID( Device__r.Opportunity_Program__r.Opportunity__c)</formula>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <description>Quantity__c * ASP__c</description>
        <formula>Quantity__c * ASP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Device Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ASP__c</columns>
        <columns>Device__c</columns>
        <columns>Fiscal_Quarter__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FN-{00000000}</displayFormat>
        <label>Forecast No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Device Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>